version 0.4.2 - dd-MMM-yyy
 . Transitions: Timing fix. Slide transitions don't show "black" space

version 0.4.1 - 08-Sept-2008
 . Actions: commented an NSLog()
 . CocosNode: added removeAll (by Codemattic)
 . CocosNode: implementation file reorganized
 . CocosNode: added stopAction method (to remove just 1 one action)
 . CocosNode: sanity check when removing actions
 . Demo: ClickAndMove demo working again (issue 12)
 . Demo: SpritesDemo using back, restart & forward arrows
 . Demo: TransitionsDemo using back, restart & forward arrows
 . Demo: ParticleDemo using back, restart & forward arrows
 . Director: added eventsEnabled. You can enable/disabled touch events globally (eg: Transitions want this feature)
 . Director: implementation file reorganized
 . Director: drawScene renamed to mainLoop
 . Director: FPS are shown in the very bottom-left corner
 . Transitions: Added new ZoomFlipXTransition transition.
 . Transitions: Added new ZoomFlipYTransition transition.
 . Transitions: Added new ZoomFlipAngularTransition transition.
 
version 0.4.0 - 30-Ago-2008
 . CocosNode: private methods are private
 . CocosNode: stop renamed to stopAllActions
 . CocosNode: children does not use a auxiliar array (by Codemattic)
 . Director: private methods are private
 . Menu: removed setOffsetY
 . Menu: can be positioned like any other CocosNode using the position property
 . MenuItem: renamed to MenuItemFont
 . MenuItem: added MenuItemImage
 . MenuItem: uses target/selector, not receiver/selector
 . MenuItem: MenuItemFont restore scale to 1.0 after being invoked (by Codemattic)
 . MenuItem: can be positioned on runtime. 
 . TextureNode: renamed setR:g:b: to setRGB:::

version 0.3.3 - 23-Ago-2008
 . Action: Added CallFuncND. Like CallFuncN but accepts data
 . CocosNode: actions can schedule actions [FIXED CRASH]
 . CocosNode: added default capacity to actions, children, & schedulers
 . CocosNode: relativeTrasnformAnchor is property